sugar/tests/success/case.mx

u : _|_ + _|_ |- case u of { inl x -> x ; inr x -> x }
