sugar/tests/fail/case.mx
a : 1 |- case a of
    { inl u -> u
    ; inr v -> v
    }
